# make_acado_solver

./: .gitignore  CMakeLists.txt  README.md  nmpc_solver_setup.cpp
solver/: nmpc_solver_setup
solver/OCPexport/: acado_common.h  acado_qpoases_interface.cpp  acado_solver.c  make_acado_solver_sfunction.m
test/: CMakeLists.txt  main.cpp
test_on_clion/solver/OCPexport/: acado_integrator.c  acado_qpoases_interface.hpp
